# gpu_burn

./: .clangd  .gitignore  CMakeLists.txt  README.md  README_UPGRADES.md
docs/: advanced_workload_designs.md  gpu_burn_upgrade_recommendations.md  monitoring_architecture.md
include/: checksum_validator.h  data_store.h  golden_reference.h  gpu_types.h  gpu_utils.h  kernel_interface.h  mathematical_invariants.h  metrics_collector.h  monitoring_engine.h  monitoring_integration.h  monitoring_types.h  report_generator.h  spatial_redundancy.h  tmr_validator.h  validation_engine.h  validation_type_converter.h  validation_types.h
src/host/: main.cpp
src/kernels/: bf16_kernel.cu  fp16_kernel.cu  fp32_kernel.cu  fp4_kernel.cu  fp64_kernel.cu  fp8_kernel.cu  int_kernels.cu  kernel_validation_impl.cpp  llm_inference_kernel.cu  llm_training_kernel.cu  memory_controller_stress_kernel.cu  mixed_precision_chaos_kernel.cu  power_virus_kernel.cu  thermal_gradient_kernel.cu
src/monitoring/: console_reporter.cpp  csv_reporter.cpp  data_store.cpp  error_monitor.cpp  gpu_health_monitor.cpp  json_reporter.cpp  monitoring_engine.cpp  monitoring_integration.cpp  monitoring_utils.cpp  performance_monitor.cpp  system_monitor.cpp
src/validation/: checksum_validator.cu  golden_reference.cu  llm_validation.cu  mathematical_invariants.cu  spatial_redundancy.cu  temporal_redundancy_validator.cu  tmr_validator.cu  validation_engine.cu  validation_type_converter.cu
